--- a/web.config
+++ b/web.config
@@ -59,6 +59,6 @@
     </security>
   </system.webServer>
   <system.web>
-    <compilation tempDirectory="C:\Inetpub\vhosts\ozayakcan.xyz\tmp" />
+    <compilation tempDirectory="C:\Inetpub\vhosts\ozayakcan.com.tr\tmp" />
   </system.web>
 </configuration>
