--- a/web.config
+++ b/web.config
@@ -30,6 +30,14 @@
           <match url="^calismalar.html(/?)+$" ignoreCase="false" />
           <action type="Rewrite" url="index.php?sayfa=calismalar" appendQueryString="true" />
         </rule>
+        <rule name="Sitemap" stopProcessing="true">
+          <match url="^sitemap.xml(/?)+$" ignoreCase="false" />
+          <action type="Rewrite" url="sayfalar/text/sitemap.php" appendQueryString="true" />
+        </rule>
+        <rule name="Robots" stopProcessing="true">
+          <match url="^robots.txt(/?)+$" ignoreCase="false" />
+          <action type="Rewrite" url="sayfalar/text/robots.php" appendQueryString="true" />
+        </rule>
         <rule name="Calisma" stopProcessing="true">
           <match url="^calismalar/([a-zA-Z0-9-_]+).html(/?)+$" ignoreCase="false" />
           <action type="Rewrite" url="index.php?sayfa=calisma&amp;calisma={R:1}" appendQueryString="true" />
