robots.txt ve sitemap.xml artık php dosyalarından veri çekiyor.

--- a/web.config
+++ b/web.config
@@ -32,11 +32,11 @@
         </rule>
         <rule name="Sitemap" stopProcessing="true">
           <match url="^sitemap.xml(/?)+$" ignoreCase="false" />
-          <action type="Rewrite" url="sayfalar/text/sitemap.php" appendQueryString="true" />
+          <action type="Rewrite" url="sitemap.php" appendQueryString="true" />
         </rule>
         <rule name="Robots" stopProcessing="true">
           <match url="^robots.txt(/?)+$" ignoreCase="false" />
-          <action type="Rewrite" url="sayfalar/text/robots.php" appendQueryString="true" />
+          <action type="Rewrite" url="robots.php" appendQueryString="true" />
         </rule>
         <rule name="Calisma" stopProcessing="true">
           <match url="^calismalar/([a-zA-Z0-9-_]+).html(/?)+$" ignoreCase="false" />
@@ -62,4 +62,7 @@
       </requestFiltering>
     </security>
   </system.webServer>
+  <system.web>
+    <compilation tempDirectory="C:\Inetpub\vhosts\ozayakcan.com.tr\tmp" />
+  </system.web>
 </configuration>
